--- a/ui/client/public/index.html
+++ b/ui/client/public/index.html
@@ -6,11 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Carter+One|Chivo|Enriqueta|Gentium+Book+Basic|Goudy+Bookletter+1911|Oleo+Script|Overpass|Sanchez|Shrikhand|Slabo+13px|Varela"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
+  <title>Z-Spa</title>
 </head>
 
 <body>
   <div id='app'>hello from index.html</div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIdqAFi1vtwC7B3sKQcln2V6YUtKCvHcw" async defer></script>
   <link href="https://fonts.googleapis.com/css?family=Crete+Round|Pacifico" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
