--- a/ui/client/public/index.html
+++ b/ui/client/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="./favicon.ico" rel="icon" type="image/x-icon" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Carter+One|Chivo|Enriqueta|Gentium+Book+Basic|Goudy+Bookletter+1911|Oleo+Script|Overpass|Sanchez|Shrikhand|Slabo+13px|Varela"
