fixed price component display on phone

--- a/ui/client/public/index.html
+++ b/ui/client/public/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div id='app'>hello from index.html</div>
+  <div id='app'></div>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIdqAFi1vtwC7B3sKQcln2V6YUtKCvHcw" async defer></script>
   <link href="https://fonts.googleapis.com/css?family=Crete+Round|Pacifico" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
